--- a/Pointcloud_lightweight.ipynb
+++ b/Pointcloud_lightweight.ipynb
@@ -6,6 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "collapsed_sections": [
+        "b-a1KIwwyV1E",
         "Ek3tN2nzia3K",
         "y5zKXHm_fv-B",
         "kRsalMETf5FJ"
@@ -30,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nhuang37/ScalarModel/blob/master/Pointcloud_lightweight.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nhuang37/ScalarModel/blob/main/Pointcloud_lightweight.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -53,7 +54,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db9ab6f4-ecb6-4210-ccd7-fd37e7b6b1c3"
+        "outputId": "8544564a-1f98-4fc2-9db7-90155e8c85f9"
       },
       "execution_count": 1,
       "outputs": [
@@ -125,18 +126,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oUw8G1yLxYA6",
-        "outputId": "2b702f98-06e8-4d28-b08e-99d1f5355794"
+        "outputId": "0ec3384f-dbf8-40d9-c1d2-f95ab41b35cb"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "2.0.0+cu118\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.2/10.2 MB\u001b[0m \u001b[31m48.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.8/4.8 MB\u001b[0m \u001b[31m57.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m38.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.2/10.2 MB\u001b[0m \u001b[31m76.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.8/4.8 MB\u001b[0m \u001b[31m88.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m81.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
@@ -147,11 +148,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
-        "id": "6UwCMOERTF2G"
+        "id": "6UwCMOERTF2G",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 383
+        },
+        "outputId": "8327db29-e4ff-4891-9fa6-d2b6ba9baada"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-7001d6c24e0a>\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mitertools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpermutations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ot'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import networkx as nx\n",
@@ -190,7 +219,7 @@
       "metadata": {
         "id": "zEOy5xeBxvII"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +252,7 @@
       "metadata": {
         "id": "NZJSzPD0wxuT"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -871,13 +900,13 @@
       "metadata": {
         "id": "bLpdxBHuxE53"
       },
-      "execution_count": 99,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "target=0\n",
+        "target=1\n",
         "\n",
         "class Univariate(object):\n",
         "    def __call__(self, data):\n",
@@ -894,7 +923,7 @@
       "metadata": {
         "id": "GWeom70niCpR"
       },
-      "execution_count": 142,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -994,7 +1023,7 @@
       "metadata": {
         "id": "1XYRugSLg3JU"
       },
-      "execution_count": 135,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1033,7 +1062,7 @@
       "metadata": {
         "id": "-up-LvBGQQE4"
       },
-      "execution_count": 89,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1153,13 +1182,13 @@
       "metadata": {
         "id": "d2ssWTYuWXO7"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "hid_dim = 16\n",
+        "hid_dim = 32\n",
         "out_dim = 1\n",
         "dropout = 0\n",
         "\n",
@@ -1168,7 +1197,111 @@
         "                       num_repetitions=1, all_std=True, verbose=True, dropout=dropout)"
       ],
       "metadata": {
-        "id": "TdXBMiL6s5bT"
+        "id": "TdXBMiL6s5bT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc6d74bc-da26-4099-cfaf-30f4111c54d6"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 049, LR: 0.0160000, Loss: 2.0908,Val MAE: 2.1246\n",
+            "Epoch: 099, LR: 0.0065536, Loss: 1.9890,Val MAE: 1.9706\n",
+            "Epoch: 149, LR: 0.0033554, Loss: 1.9412,Val MAE: 2.5252\n",
+            "Epoch: 199, LR: 0.0013744, Loss: 1.9150,Val MAE: 1.8962\n",
+            "Epoch: 249, LR: 0.0005629, Loss: 1.8846,Val MAE: 1.8712\n",
+            "Epoch: 299, LR: 0.0002306, Loss: 1.8878,Val MAE: 1.9510\n",
+            "Epoch: 049, LR: 0.0128000, Loss: 1.9829,Val MAE: 2.0787\n",
+            "Epoch: 099, LR: 0.0052429, Loss: 1.9192,Val MAE: 1.8534\n",
+            "Epoch: 149, LR: 0.0033554, Loss: 1.8921,Val MAE: 3.9271\n",
+            "Epoch: 199, LR: 0.0013744, Loss: 1.8450,Val MAE: 1.9244\n",
+            "Epoch: 249, LR: 0.0007037, Loss: 1.8351,Val MAE: 1.7835\n",
+            "Epoch: 299, LR: 0.0003603, Loss: 1.8178,Val MAE: 1.7479\n",
+            "Epoch: 049, LR: 0.0128000, Loss: 2.0434,Val MAE: 3.7106\n",
+            "Epoch: 099, LR: 0.0081920, Loss: 1.8998,Val MAE: 2.3666\n",
+            "Epoch: 149, LR: 0.0052429, Loss: 1.8184,Val MAE: 1.8405\n",
+            "Epoch: 199, LR: 0.0021475, Loss: 1.7868,Val MAE: 1.8946\n",
+            "Epoch: 249, LR: 0.0010995, Loss: 1.7504,Val MAE: 1.6773\n",
+            "Epoch: 299, LR: 0.0004504, Loss: 1.7512,Val MAE: 1.7158\n",
+            "Epoch: 049, LR: 0.0128000, Loss: 2.0265,Val MAE: 2.1434\n",
+            "Epoch: 099, LR: 0.0052429, Loss: 1.8819,Val MAE: 4.6227\n",
+            "Epoch: 149, LR: 0.0033554, Loss: 1.8263,Val MAE: 1.8587\n",
+            "Epoch: 199, LR: 0.0021475, Loss: 1.7905,Val MAE: 3.0733\n",
+            "Epoch: 249, LR: 0.0013744, Loss: 1.7633,Val MAE: 1.8796\n",
+            "Epoch: 299, LR: 0.0005629, Loss: 1.7622,Val MAE: 1.8124\n",
+            "Epoch: 049, LR: 0.0160000, Loss: 2.0155,Val MAE: 2.6053\n",
+            "Epoch: 099, LR: 0.0081920, Loss: 1.9439,Val MAE: 2.4253\n",
+            "Epoch: 149, LR: 0.0052429, Loss: 1.8926,Val MAE: 2.0987\n",
+            "Epoch: 199, LR: 0.0026844, Loss: 1.8517,Val MAE: 2.1502\n",
+            "Epoch: 249, LR: 0.0010995, Loss: 1.8385,Val MAE: 1.9820\n",
+            "Epoch: 299, LR: 0.0004504, Loss: 1.8516,Val MAE: 1.8764\n",
+            "Epoch: 049, LR: 0.0128000, Loss: 2.0294,Val MAE: 2.3521\n",
+            "Epoch: 099, LR: 0.0052429, Loss: 1.9228,Val MAE: 3.0986\n",
+            "Epoch: 149, LR: 0.0026844, Loss: 1.8397,Val MAE: 2.1623\n",
+            "Epoch: 199, LR: 0.0013744, Loss: 1.8214,Val MAE: 2.0207\n",
+            "Epoch: 249, LR: 0.0007037, Loss: 1.7767,Val MAE: 1.8612\n",
+            "Epoch: 299, LR: 0.0002882, Loss: 1.7663,Val MAE: 1.7683\n",
+            "Epoch: 049, LR: 0.0128000, Loss: 2.0238,Val MAE: 2.2017\n",
+            "Epoch: 099, LR: 0.0052429, Loss: 1.9079,Val MAE: 3.0893\n",
+            "Epoch: 149, LR: 0.0026844, Loss: 1.8720,Val MAE: 2.0199\n",
+            "Epoch: 199, LR: 0.0013744, Loss: 1.8546,Val MAE: 1.9860\n",
+            "Epoch: 249, LR: 0.0007037, Loss: 1.8392,Val MAE: 2.1533\n",
+            "Epoch: 299, LR: 0.0003603, Loss: 1.8382,Val MAE: 1.9628\n",
+            "Epoch: 049, LR: 0.0160000, Loss: 2.0888,Val MAE: 2.2022\n",
+            "Epoch: 099, LR: 0.0081920, Loss: 1.9615,Val MAE: 3.2575\n",
+            "Epoch: 149, LR: 0.0052429, Loss: 1.9403,Val MAE: 2.1760\n",
+            "Epoch: 199, LR: 0.0021475, Loss: 1.9135,Val MAE: 2.5957\n",
+            "Epoch: 249, LR: 0.0013744, Loss: 1.8871,Val MAE: 2.1862\n",
+            "Epoch: 299, LR: 0.0004504, Loss: 1.8891,Val MAE: 1.9448\n",
+            "Epoch: 049, LR: 0.0102400, Loss: 2.0220,Val MAE: 4.9425\n",
+            "Epoch: 099, LR: 0.0065536, Loss: 1.9220,Val MAE: 2.3240\n",
+            "Epoch: 149, LR: 0.0033554, Loss: 1.8621,Val MAE: 1.9839\n",
+            "Epoch: 199, LR: 0.0021475, Loss: 1.8271,Val MAE: 2.2732\n",
+            "Epoch: 249, LR: 0.0010995, Loss: 1.8090,Val MAE: 1.8873\n",
+            "Epoch: 299, LR: 0.0004504, Loss: 1.7930,Val MAE: 1.8176\n",
+            "Epoch: 049, LR: 0.0128000, Loss: 2.0243,Val MAE: 2.0287\n",
+            "Epoch: 099, LR: 0.0065536, Loss: 1.9165,Val MAE: 3.1806\n",
+            "Epoch: 149, LR: 0.0033554, Loss: 1.8613,Val MAE: 2.1593\n",
+            "Epoch: 199, LR: 0.0013744, Loss: 1.8266,Val MAE: 1.7978\n",
+            "Epoch: 249, LR: 0.0007037, Loss: 1.8086,Val MAE: 1.8898\n",
+            "Epoch: 299, LR: 0.0002882, Loss: 1.8053,Val MAE: 1.7928\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Target_variable={target}, Test_MAE={mae} (with std={std_all})\")\n",
+        "#reference benchmark: Kernel-ridge-regression 1.83; Deep-Tensor-Neural-Network 1.26"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c3RlxCujBJRi",
+        "outputId": "15f5539b-0bcc-45f6-8a59-267c9ca26214"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Target_variable=1, Test_MAE=1.799133151383107 (with std=0.08260353613751173)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dF-FLdvGIJp5"
       },
       "execution_count": null,
       "outputs": []
